@@ -1,4 +1,4 @@
-.mainform
+.form
   - form_for(@account) do |f|
     = hidden_field_tag "account[user_id]", @current_user.id
     .title Create Account
