@@ -33,7 +33,9 @@
       </div>
 
       <div class="label">
-        <%= f.check_box :remember_me %> Remember me
+        <div class="check_box">
+          <%= f.check_box :remember_me %> Remember me
+        </div>
       </div>
       
     </div>
