@@ -6,8 +6,7 @@
       = controller.controller_name + " : " + controller.action_name
     = stylesheet_link_tag "screen"
     = yield :stylesheet_link
-    %stlyles
-      = yield :styles
+    = yield :styles
 
     = javascript_include_tag :defaults, :cache => true
     = yield :javascript_include
