@@ -1,4 +1,4 @@
-<div class="mainform">
+<div class="form">
 
   <% form_for @user, :url => profile_path do |f| %>
     <div class="title_menu">
